--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ behave = "^1.3.2"
 pytest = "^8.4.1"
 pytest-playwright = "^0.7.0"
 
+[tool.poetry.group.dev.dependencies]
+allure-behave = "^2.13"
+allure-python-commons = "^2.13"
 
 [build-system]
 requires = ["poetry-core"]
